[gd_scene load_steps=2 format=1]

[ext_resource path="res://gui/slider_line_edit.gd" type="Script" id=1]

[node name="HBoxContainer" type="HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 18.0
margin/right = 169.0
margin/bottom = 42.0
alignment = 0
script/script = ExtResource( 1 )

[node name="slider" type="HSlider" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 4.0
margin/right = 107.0
margin/bottom = 20.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="line_edit" type="LineEdit" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 111.0
margin/top = 0.0
margin/right = 169.0
margin/bottom = 24.0
text = "0"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[connection signal="value_changed" from="slider" to="." method="_on_slider_value_changed"]

[connection signal="text_entered" from="line_edit" to="." method="_on_line_edit_text_entered"]


